; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_main.c_draw_text.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_main.c_draw_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_BLEND = common dso_local global i32 0, align 4
@GL_SRC_ALPHA = common dso_local global i32 0, align 4
@GL_ONE_MINUS_SRC_ALPHA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @draw_text(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @GL_BLEND, align 4
  %8 = call i32 @glEnable(i32 %7)
  %9 = load i32, i32* @GL_SRC_ALPHA, align 4
  %10 = load i32, i32* @GL_ONE_MINUS_SRC_ALPHA, align 4
  %11 = call i32 @glBlendFunc(i32 %9, i32 %10)
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %6, align 4
  %15 = mul nsw i32 %14, 6
  %16 = call i32 @draw_triangles_2d(i32* %12, i32 %13, i32 %15)
  %17 = load i32, i32* @GL_BLEND, align 4
  %18 = call i32 @glDisable(i32 %17)
  ret void
}

declare dso_local i32 @glEnable(i32) #1

declare dso_local i32 @glBlendFunc(i32, i32) #1

declare dso_local i32 @draw_triangles_2d(i32*, i32, i32) #1

declare dso_local i32 @glDisable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
